# domain-forge

./: .env.example  .gitignore  LICENSE  README.md  demo.sh  demo.tape  domainforge.config.example.json  pyproject.toml  requirements.txt
domainforge/: __init__.py  availability.py  cli.py  config.py  generate.py  llm.py  output.py  pipeline.py  score.py  seeds.py
examples/: README.md  available.csv  shortlist.csv  shortlist.md
